--- a/src/app/pages/pet-timeline/pet-filter/pet-filter.component.html
+++ b/src/app/pages/pet-timeline/pet-filter/pet-filter.component.html
@@ -1,3 +1,6 @@
-<p>
-  filter template
-</p>
+<section #petFilter class="pet-filter-cnt">
+    <mat-radio-group aria-label="Select an option">
+        <mat-radio-button value="1">Pisicuta</mat-radio-button>
+        <mat-radio-button value="2">Catel</mat-radio-button>
+      </mat-radio-group>
+</section>
