--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -1,7 +1,7 @@
-<section class="timeline">
+<section #timeline class="timeline">
   <div class="container">
     <div class="timeline-item">
-      <div class="timeline-img"></div>
+      <div class="timeline-img">1 zi</div>
 
       <div class="timeline-content js--fadeInLeft">
         <h2>Title</h2>
