--- a/src/app/pages/pet-timeline/pet-filter/pet-filter.component.scss
+++ b/src/app/pages/pet-timeline/pet-filter/pet-filter.component.scss
@@ -1,13 +1,3 @@
-@import '../../../@theme/styles/themes';
-
-@include nb-install-component() {
-  nb-card-header {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
-    p {
-      width: 80%;
-    }
-  }
+.mat-radio-button ~ .mat-radio-button {
+  margin-left: 16px;
 }
