--- a/src/app/pages/dashboard/contacts/contacts.component.html
+++ b/src/app/pages/dashboard/contacts/contacts.component.html
@@ -1,4 +1,4 @@
-<nb-card size="giant">
+<!-- <nb-card size="giant">
   <nb-tabset fullWidth>
 
     <nb-tab tabTitle="Contacts">
@@ -20,4 +20,4 @@
     </nb-tab>
 
   </nb-tabset>
-</nb-card>
+</nb-card> -->
