--- a/src/app/pages/dashboard/electricity/electricity.component.html
+++ b/src/app/pages/dashboard/electricity/electricity.component.html
@@ -1,4 +1,4 @@
-<nb-card class="cards-container">
+<!-- <nb-card class="cards-container">
   <nb-card size="large" class="table-card">
     <nb-card-header>
       Electricity Consumption
@@ -44,4 +44,4 @@
 
     <ngx-electricity-chart [data]="chartData"></ngx-electricity-chart>
   </nb-card>
-</nb-card>
+</nb-card> -->
