--- a/src/app/pages/dashboard/rooms/room-selector/room-selector.component.html
+++ b/src/app/pages/dashboard/rooms/room-selector/room-selector.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<!-- <nb-card>
   <nb-card-header>Room Management</nb-card-header>
   <div class="room-selector">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -87,4 +87,4 @@
       </g>
     </svg>
   </div>
-</nb-card>
+</nb-card> -->
