--- a/src/app/pages/dashboard/security-cameras/security-cameras.component.html
+++ b/src/app/pages/dashboard/security-cameras/security-cameras.component.html
@@ -1,4 +1,4 @@
-<nb-card size="giant">
+<!-- <nb-card size="giant">
 
   <nb-card-header>
     Security Cameras
@@ -58,4 +58,4 @@
       </nb-action>
     </nb-actions>
   </nb-card-footer>
-</nb-card>
+</nb-card> -->
