--- a/src/app/pages/dashboard/temperature/temperature.component.html
+++ b/src/app/pages/dashboard/temperature/temperature.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large">
+<!-- <nb-card size="large">
   <nb-tabset fullWidth>
 
     <nb-tab tabTitle="Temperature">
@@ -66,4 +66,4 @@
       </nb-radio-group>
     </nb-tab>
   </nb-tabset>
-</nb-card>
+</nb-card> -->
