--- a/src/app/pages/dashboard/weather/weather.component.html
+++ b/src/app/pages/dashboard/weather/weather.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium">
+<!-- <nb-card size="medium">
   <nb-card-body>
     <span class="h3 location">New York</span>
     <span class="date">Mon 29 May</span>
@@ -50,4 +50,4 @@
       </div>
     </div>
   </nb-card-body>
-</nb-card>
+</nb-card> -->
