--- a/src/app/pages/dashboard/kitten/kitten.component.html
+++ b/src/app/pages/dashboard/kitten/kitten.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium">
+<!-- <nb-card size="medium">
   <div class="picture" style.background-image="url('assets/images/kitten-{{currentTheme}}.png')"></div>
 
   <div class="details">
@@ -22,4 +22,4 @@
       <nb-icon icon="github" pack="eva"></nb-icon>
     </a>
   </nb-card-footer>
-</nb-card>
+</nb-card> -->
