--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -1,7 +1,16 @@
 <section #timeline class="timeline">
   <div class="container">
     <div timeline-item class="timeline-item" *ngFor="let item of timelineItems; let even=even" >
-      <div class="timeline-img">{{item.age}}</div>
+      <div class="timeline-img">
+        <div class="timeline-value-cnt">
+          <div class="timeline-value-number">
+            {{item.age}}
+          </div>
+          <div class="timeline-value-word">
+            saptamana
+          </div>
+        </div>
+      </div>
       <div class="timeline-content" [ngClass]="even===true ? 'js--fadeInLeft' : 'timeline-card js--fadeInRight'">
         <div class="timeline-img-header" *ngIf="!even">
           <h2>{{item.Title}}</h2>
