--- a/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.html
+++ b/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.html
@@ -1,26 +1,33 @@
-
-<div class="kg" id="lo-homepage-no-ads-section">
-  <div class="r u fs">
-    <div class="kg" id="lo-homepage-no-ads">
-    <div class="ft er u">
-    <div class="fu u">
-      <h2 class="cm cn fv fw fx fy fz ga gb gc gd ge au">
-    <div class="kg" id="lo-homepage-no-ads-title">No ads.
-    <div class="ak fj"><br>
-    </div> <!-- -->No problems.
+<!-- <ngx-masonry>
+  <div ngxMasonryItem class="masonry-item" *ngFor="let item of masonryItems">
+      <img class="img-pic" src="http://www.petsworld.in/blog/wp-content/uploads/2014/09/adorable-cat.jpg">
+      <div class="img-desc-wrap">
+          <div class="title ng-binding">
+              A beautiful sunshine
+          </div>
+          <div class="uploaded-date ng-binding">
+              Uploaded on : Fri Sep 27 2019
+          </div>
+          <div class="likes-watch-wrap">
+              <div class="likes ng-binding"><span class="icon-like"></span> 30</div>
+              <div class="watch ng-binding"><span class="icon-watch"></span> 204</div>
+          </div>
+      </div>
+ </div>
+</ngx-masonry> -->
+<div class="masonry-demo">
+    <div class="links">
+      <a href="https://github.com/gethinoakes/ngx-masonry" target="_blank">View on Github</a>
+      <a class="github-button" href="https://github.com/gethinoakes/ngx-masonry" data-size="large" data-show-count="true" aria-label="Star gethinoakes/ngx-masonry on GitHub">Star</a>
+    </div>
+    <h1>Ngx Masonry Demo</h1>
+  
+    <ngx-masonry [options]="masonryOptions" [useImagesLoaded]="true" class="ngx-masonry">
+      <div *ngFor="let picture of masonryImages" class="masonry-item">
+        <img src="{{picture.picture}}">
+      </div>
+    </ngx-masonry>
+  
+    <button *ngIf="limit < 100" (click)="showMoreImages()">Show More Images</button>
+    <h2 *ngIf="limit >= 100">No More Images</h2>
   </div>
-</h2>
-</div>
-<h3 class="aq ar dw fb dy fc fd fe ff fg fh fi dg">
-    <div class="kg" id="lo-homepage-no-ads-sub-title">Your privacy stays yours. We don’t sell your data or target you with ads. Ever.
-    </div></h3></div>
-  <div class="v gf gg db gh">
-    <div class="u gi fp gj">
-    <div class="gk u gl"><h2 class="aq dv dw dx dy dz ea eb ec ed ee ef au">
-    <div class="kg" id="lo-homepage-no-ads-body-title">We do things differently.</div></h2></div><h3 class="aq ar dw fb dy fc fd fe ff fg fh fi dg">
-    <div class="kg" id="lo-homepage-no-ads-body-text">Medium is not like any other platform on the internet.<!-- --> <span class="fr fa">Our sole purpose is to help you find compelling ideas, knowledge, and perspectives.</span> <!-- -->We don’t serve ads—we serve you, the curious reader who loves to learn new things. Medium is home to thousands of independent voices, and we combine humans and technology to find the best reading for you—and filter out the rest.
-    </div></h3></div>
-  <div class="u gi gm gn go gp"><a href="https://medium.com/m/signin?operation=register&amp;redirect=https%3A%2F%2Fmedium.com%2F&amp;source=--------------------------landing_home_mission-" class="av aw ax ay az ba bb bc bd be bf bg bh bi bj bk" rel="noopener">
-    <div class="kg" id="lo-homepage-get-started-button">
-    <div class="bn bo bp bq br bs bt bu bv bh bw bx be aq b by eh dn cb ei cd ce cf ej">Get started</div></div></a></div></div><hr class="gq gr gs gt gu gv gw gx gy gz ha hb">
-  </div></div></div>
