--- a/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.scss
+++ b/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.scss
@@ -39,4 +39,77 @@
       margin: -1rem;
     }
   }
+
+  .masonry-item {  
+    width: 371px;
+    position: absolute;
+    top: 0px;
+    left: 0px;    
+  }
+
+  .img-pic {
+    width: inherit;
+  }
+
+  .masonry-demo {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+  }
+  
+  .links {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .links a {
+    flex-basis: 80%;
+    color: #009FB7;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  
+  .links a:hover {
+    color: #FE4A49;
+  }
+  
+  .links iframe {
+    flex-basis: 50%;
+  }
+  
+  ngx-masonry {
+    margin: 0 auto;
+  }
+
+  .ngx-masonry {
+    position: relative;
+    width: 700px;
+    height: 4200.86px;
+  }
+  
+  button {
+    cursor: pointer;
+    width: 40%;
+    height: 50px;
+    background: #f1f1f1;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 50px;
+  }
+  
+  .masonry-item {
+    margin-bottom: 20px;
+    background-color: #f1f1f1;
+    background-size: cover;
+    width: 340px;
+  }
+  
+  .masonry-item img {
+    width: 100%;
+    height: 100%;
+    min-height: 340px;
+  }
 }
