done masonry articles page

--- a/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.html
+++ b/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.html
@@ -33,8 +33,20 @@
   </div> -->
 <div class="masonry-demo">
   <ngx-masonry [options]="masonryOptions" [useImagesLoaded]="true" class="ngx-masonry">
-    <div ngxMasonryItem class="masonry-item" *ngFor="let picture of masonryImages">
+    <div ngxMasonryItem class="masonry-item" *ngFor="let picture of masonryImages" (click)="goToDetails(picture.id)">
       <img src="{{picture.picture}}">
+      <div class="img-desc-wrap">
+        <div class="title ng-binding">
+            Lets play hide and seek
+        </div>
+        <div class="uploaded-date ng-binding">
+            Uploaded on : Wed Oct 23 2019
+        </div>
+        <div class="likes-watch-wrap">
+            <div class="likes ng-binding"><span class="icon-like"></span> 51</div>
+            <div class="watch ng-binding"><span class="icon-watch"></span> 1015</div>
+        </div>
+      </div>
    </div>
   </ngx-masonry>
   <button *ngIf="limit < 100" (click)="showMoreImages()">Show More Images</button>
