--- a/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.scss
+++ b/src/app/pages/pet-articles/pet-articles-feed/pet-articles-feed.component.scss
@@ -1,44 +1,3 @@
-@import '~bootstrap/scss/mixins/breakpoints';
-@import '~@nebular/theme/styles/global/breakpoints';
-@import '../../../@theme/styles/themes';
-
-@include nb-install-component() {
-  .calendars {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -1rem -0.5rem;
-    justify-content: center;
-  }
-
-  .calendar-container {
-    margin: 1rem 0.5rem;
-  }
-
-  .subtitle {
-    display: block;
-    margin-bottom: 0.5rem;
-  }
-
-  @include media-breakpoint-up(md) {
-    .calendars {
-      justify-content: flex-start;
-    }
-  }
-
-  @include media-breakpoint-up(lg) {
-    .calendars {
-      margin: -1.1rem;
-    }
-    .calendar-container {
-      margin: 1rem;
-    }
-  }
-
-  @include media-breakpoint-up(xxxl) {
-    .calendars {
-      margin: -1rem;
-    }
-  }
 
   .masonry-item {  
     width: 371px;
@@ -105,6 +64,21 @@
     background-color: #f1f1f1;
     background-size: cover;
     width: 340px;
+    position: absolute;
+    list-style: none;
+    background: #ffffff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+    overflow: hidden;
+    border-radius: 10px;
   }
   
   .masonry-item img {
@@ -112,4 +86,40 @@
     height: 100%;
     min-height: 340px;
   }
-}
+
+  .img-desc-wrap {
+    padding: 10px;
+  }
+
+  .img-desc-wrap .title {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .img-desc-wrap .uploaded-date {
+    margin-top: 5px;
+    font-size: 14px;
+    color: #999;
+  }
+
+  .img-desc-wrap .likes-watch-wrap {
+    margin-top: 10px;
+  }
+
+  .img-desc-wrap .likes, .img-desc-wrap .watch {
+    display: inline-block;
+    margin-right: 20px;
+  }
+
+  [class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
