add btn timeline

--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -1,4 +1,9 @@
 <section #timeline class="timeline">
+  <div class="new-timeline-item-cnt">
+    <button (click)="newTimmelineItem()" class="new-timeline-item-btn">
+      Adauga
+    </button>
+  </div>
   <div class="container">
     <div timeline-item class="timeline-item" *ngFor="let item of timelineItems; let even=even" >
       <div class="timeline-img">
