--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
@@ -8,7 +8,7 @@ $accent: #FF4081;
 $valueWord: ellipsis;
 
 section {
-  padding: 100px 0;
+  padding: 10px 0;
 }
 
 html, body {
@@ -282,4 +282,27 @@ blockquote {
 		}
 	}
 	
+}
+
+.new-timeline-item-cnt {
+	float: right;
+}
+
+.new-timeline-item-btn {
+	display: inline-block;
+	padding:0.35em 1.2em;
+	border:0.1em solid #FFFFFF;
+	margin:0 0.3em 0.3em 0;
+	border-radius:0.12em;
+	box-sizing: border-box;
+	text-decoration:none;
+	font-family:'Roboto',sans-serif;
+	font-weight:300;
+	color:#000000;
+	text-align:center;
+	transition: all 0.2s;
+}
+.new-timeline-item-btn:hover {
+	color:#000000;
+	background-color:#FFFFFF;
 }
