create timline modal

--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -1,6 +1,6 @@
 <section #timeline class="timeline">
   <div class="new-timeline-item-cnt">
-    <button (click)="newTimmelineItem()" class="new-timeline-item-btn">
+    <button (click)="openDialog()" class="new-timeline-item-btn">
       Adauga
     </button>
   </div>
