--- a/src/app/pages/shared/components/dialog/dialog.component.html
+++ b/src/app/pages/shared/components/dialog/dialog.component.html
@@ -1,40 +1,62 @@
-<h2 mat-dialog-title>{{title}}</h2>
+<div class="dialog-cnt">
+    <h2 mat-dialog-title>{{title}}</h2>
 
-<mat-dialog-content [formGroup]="form"> 
-    <mat-form-field>
-        <input matInput
-                placeholder="catel sau pisica"
-                formControlName="animalType">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput
-                placeholder="varsta"
-                formControlName="age">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput
-                placeholder="titlu"
-                formControlName="title">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput
-                placeholder="poze"
-                formControlName="picture">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput
-                placeholder="subtitlu"
-                formControlName="subtitle">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput
-                placeholder="descriere"
-                formControlName="descriptionText">
-    </mat-form-field>
-
-</mat-dialog-content>
-
-<mat-dialog-actions>
-    <button class="mat-raised-button"(click)="close()">Close</button>
-    <button class="mat-raised-button mat-primary"(click)="save()">Save</button>
-</mat-dialog-actions>
+    <mat-dialog-content [formGroup]="form">     
+        <mat-form-field class="form-field">
+            <mat-select matInput formControlName="animalType" placeholder="catel sau pisica?">
+                <mat-option *ngFor="let animalType of animalTypes" [value]="animalType">
+                    {{animalType}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field class="form-field">
+                <input matInput
+                        placeholder="pozitia in axa"
+                        formControlName="timelineIndex">
+            </mat-form-field>
+        <mat-form-field class="form-field">
+            <input matInput
+                    placeholder="varsta"
+                    formControlName="age">
+        </mat-form-field>
+        <mat-form-field class="form-field">
+            <input matInput
+                    placeholder="titlu"
+                    formControlName="title">
+        </mat-form-field>
+        <mat-form-field class="form-field">
+            <mat-select matInput formControlName="infoItems" placeholder="catel sau pisica?">
+                <mat-option *ngFor="let infoItem of infoItems" [value]="animalType">
+                    {{animalType}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field class="form-field">
+            <input matInput
+                    placeholder="subtitlu"
+                    formControlName="subtitle">
+        </mat-form-field>
+        <mat-form-field class="form-field">
+            <input matInput
+                    placeholder="poze"
+                    formControlName="picture">
+        </mat-form-field>
+        <mat-form-field class="form-field">
+            <input matInput
+                    placeholder="descriere"
+                    formControlName="descriptionText">
+        </mat-form-field>
+    
+    
+    </mat-dialog-content>
+    
+    <mat-dialog-actions class="form-btns-wrapper">
+        <button class="mat-raised-button form-bnt"(click)="close()">Close</button>
+        <button class="mat-raised-button mat-primary form-bnt"(click)="save()">Save</button>
+    
+        <!-- <button type="submit" [disabled]="contactForm.pristine">Save</button>
+        <button type="reset" (click)="revert()" [disabled]="contactForm.pristine">
+            Revert
+        </button> -->
+    </mat-dialog-actions>
+</div>
