--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="timeline-item-body">
           <div class="timeline-items-cnt" *ngFor="let info of item.infoItems">
-              &#8226; {{info}}
+              &#8226; {{info.info}}
           </div>    
           <div class="timeline-item-desc">
             {{item.descriptionText}}
