form Data not working

--- a/src/app/pages/shared/components/dialog/dialog.component.html
+++ b/src/app/pages/shared/components/dialog/dialog.component.html
@@ -37,7 +37,14 @@
                     placeholder="subtitlu"
                     formControlName="subtitle">
         </mat-form-field>
-         <ngx-file-upload formControlName="picture"></ngx-file-upload>
+        <div class="form-field">
+            <ngx-file-upload formControlName="picture" [progress]="progress"></ngx-file-upload>
+            <div class="invalid-feedback" style="display: block">
+               <ng-container *ngIf="hasError('picture', 'required')">This field is required</ng-container>
+               <ng-container *ngIf="hasError('picture', 'requiredFileType')">Only PNG 🤡</ng-container>
+             </div>
+        </div>
+
         <!-- <mat-form-field class="form-field">
             <input matInput
                     type="file"
