--- a/src/app/pages/shared/components/file-upload/file-upload.component.html
+++ b/src/app/pages/shared/components/file-upload/file-upload.component.html
@@ -1,6 +1,9 @@
 <div class="file-drop-area">
-    <span class="fake-btn">Choose file</span>
-    <span class="file-msg">{{file ? file.name : 'or drag and drop file here' }}</span>
-    <input class="file-input" type="file">
-  </div>
-  <ngx-progress [progress]="progress"></ngx-progress>
+  <span class="fake-btn">Alege fotografie</span>
+  <span class="file-msg">{{fileName ? fileName : 'sau drag and drop aici' }}</span>
+  <input class="file-input" type="file" (ngModelChange)="testFoo($event)">
+</div>
+<div class="change-picture" *ngIf="fileName">
+  <button (click)="changePicture()">schimba imaginea</button>
+</div>
+<ngx-progress [progress]="progress"></ngx-progress>
