--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.html
@@ -26,6 +26,7 @@
           </div>
         </div>
         <div class="timeline-img-header">
+          <img class="item-image" [src]='transform(item.picture.location, item.picture.name)'>
           <h2>{{item.title}}</h2>
         </div>
         <div class="timeline-item-body">
