--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
@@ -201,9 +201,14 @@ a {
 
 .timeline-item {
   .timeline-img-header {
-			background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0, .4)), url('https://picsum.photos/1000/800/?random') center center no-repeat;
+			background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0, .4));
 			background-size: cover;
 		}
+}
+
+.item-image {
+	width: 100%;
+    height: 100%;
 }
 
 .timeline-item-body {
