--- a/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
+++ b/src/app/pages/pet-timeline/vertical-timeline/vertical-timeline.component.scss
@@ -99,26 +99,42 @@ header {
 	padding-right: 10px;
 }
 
+.timeline-action-btn:hover {
+	cursor: pointer;
+}
+
 
 .timeline-content {
-	position: relative;
-	width: 45%;
-	padding: 10px 30px;
-	border-radius: 4px;
-	background: #f5f5f5;
-	box-shadow: 0 20px 25px -15px rgba(0, 0, 0, .3);
+	// position: relative;
+	// width: 45%;
+	// padding: 10px 30px;
+	// border-radius: 4px;
+	// background: #f5f5f5;
+	// box-shadow: 0 20px 25px -15px rgba(0, 0, 0, .3);
 
-	&::after {
-		content: '';
-		position: absolute;
-		border-style: solid;
-		width: 0;
-		height: 0;
-		top: 30px;
-		right: -15px;
-		border-width: 10px 0 10px 15px;
-		border-color: transparent transparent transparent #f5f5f5;
-	}
+	// &::after {
+	// 	content: '';
+	// 	position: absolute;
+	// 	border-style: solid;
+	// 	width: 0;
+	// 	height: 0;
+	// 	top: 30px;
+	// 	right: -15px;
+	// 	border-width: 10px 0 10px 15px;
+	// 	border-color: transparent transparent transparent #f5f5f5;
+	// }
+	margin-bottom: 20px;
+    background-color: #f1f1f1;
+    background-size: cover;
+    width: 340px;
+    position: relative;
+    list-style: none;
+    background: #ffffff;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    transition: all 400ms ease;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .timeline-age {
@@ -241,7 +257,7 @@ blockquote {
 }
 
 .date {
-	background: $accent;
+	background: transparent;
 	display: inline-flex;
 	color: $text;
 	padding: 10px;
@@ -261,12 +277,6 @@ blockquote {
 
 		.timeline-img {
 			left: 50px;
-		}
-
-		.timeline-content {
-			max-width: 100%;
-			width: auto;
-			margin-left: 70px;
 		}
 
 		.timeline-item {
@@ -303,15 +313,17 @@ blockquote {
 }
 
 .new-timeline-item-cnt {
-	float: right;
+	position: absolute;
+    right: 0;
+    top: -2em;
 }
 
 .new-timeline-item-btn {
 	display: inline-block;
 	padding:0.35em 1.2em;
-	border:0.1em solid #FFFFFF;
-	margin:0 0.3em 0.3em 0;
-	border-radius:0.12em;
+	border: 0.1em solid #FF4081;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 1.12em;
 	box-sizing: border-box;
 	text-decoration:none;
 	font-family:'Roboto',sans-serif;
@@ -321,6 +333,6 @@ blockquote {
 	transition: all 0.2s;
 }
 .new-timeline-item-btn:hover {
-	color:#000000;
-	background-color:#FFFFFF;
+	color:#FFFFFF;
+	background-color:#FF4081;
 }
