resoved timeline bug

--- a/src/app/pages/authentication/pages/login/login.component.html
+++ b/src/app/pages/authentication/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<app-progress-spinner *ngIf="showLoading"></app-progress-spinner>
+<!-- <app-progress-spinner *ngIf="showLoading"></app-progress-spinner>
 
 <div class="flexcontainer background">
 
@@ -72,4 +72,4 @@
 
   <div class="bigitem"></div>
 
-</div>
+</div> -->
